Convert to autotools + Python package

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,33 @@
 checkisomd5
 implantisomd5
+isomd5sum.pc
+setup.py
+.libs/
+autom4te.cache/
+.deps/
+INSTALL
+Makefile
+Makefile.in
+aclocal.m4
+compile
+config.guess
+config.h.in
+config.h
+config.log
+config.status
+config.sub
+configure
+depcomp
+install-sh
+libtool
+ltmain.sh
+m4/
+missing
+stamp-h*
 *.o
 *.so
-*~
 *.a
-*.tar.bz2
+*.la
+*.lo
+*~
+*.tar.*
