--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build and Test
         run: |
-          dnf install -y gcc popt-devel python3 python3-devel make xorriso
+          dnf install -y gcc popt-devel python3 python3-devel make xorriso cppcheck
           make
           make test
+          make cppcheck
